# potatobot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  bot.py  bun.lockb  config.example.json  config.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: node.js.yml  release.yml
cogs/: ai.py  api.py  code.py  economy.py  fun.py  general.py  github.py  giveaway.py  level.py  music.py  owner.py  reactionroles.py  security.py  server.py  setup.py  staff.py  starboard.py  stats.py  ticket.py  utility.py
src/: index.js  server.js
src/commands/ai/: ai.js  imagine.js  speechToText.js
src/commands/dev/: root.js
src/commands/fun/: 8ball.js  advice.js  avatar.js  bored.js  gif.js  http.js  insult.js  random.js  ttt.js
src/commands/general/: botinfo.js  ping.js  source.js  uptime.js
src/commands/giveaway/: giveaway.js
src/commands/info/: define.js  github.js
src/commands/music/: music.js
src/commands/server/: channel.js
src/commands/staff/: archive.js  kick.js
src/commands/tickets/: ticket.js  ticketEmbed.js
src/commands/util/: api.js  calc.js  code.js  color.js  convert.js  github.js  reddit.js  search.js  translate.js
src/events/: error.js  interactionCreate.js  ready.js
src/functions/: handleCommands.js  handleEvents.js
ui/: code.py  farm.py  gambling.py  papertrading.py  recreate.py  setup.py  starboard.py  ticket.py  translate.py
utils/: CONSTANTS.py  CachedDB.py  Checks.py  DBClient.py  ErrorLogger.py  Errors.py  ServerLogger.py
(+23 files in other folders)
